<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="fdn_contact_invalid">Invalid contact name or number.</string>
    <string name="fdn_contact_name_number_invalid">Name and number can not be empty at the same time.</string>
    <string name="fdn_contact_number_invalid">Invalid contact number.</string>
    <string name="fdn_phone_book_busy">Phone book is busy now,please try later.</string>
    <string name="gemini_mobile_network_sim1_tab_tag">SIM1</string>
    <string name="gemini_mobile_network_sim1_tab_label">SIM1</string>
    <string name="gemini_mobile_network_sim2_tab_tag">SIM2</string>
    <string name="gemini_mobile_network_sim2_tab_label">SIM2</string>
    <string name="gemini_simid">simId</string>
    <string name="sim_1">0</string>
    <string name="sim_2">1</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">Barred call</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_more">More</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_bluetooth_on">Bluetooth on</string>
    <string name="menu_bluetooth_off">Bluetooth off</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_unhold">Unhold</string>
    <string name="menu_endCall">End</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Dialpad</string>
    <string name="menu_hideDialpad">Dialpad</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  \u2022  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_disconnect_hold">End held</string>
    <string name="menu_disconnect_all">End all</string>
    <string name="menu_ect">Transfer</string>
    <string name="menu_answer_end_active">Answer, End Active</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="disable">Disable</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="throttle_data_usage">Data usage</string>
    <string name="sum_cell_broadcast_control_on">Enable cell broadcast</string>
    <string name="sum_cell_broadcast_control_off">Disable cell broadcast</string>
    <string name="sum_cell_broadcast_setting">Language and channel setting for cell broadcast</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="enter_pin2_text">PIN2</string>
	<string name="lable_all_outgoing">All outgoing calls</string>
	<string name="lable_all_outgoing_international">International outgoing calls</string>
	<string name="lable_all_out_except">International outgoing calls except to home PLMN</string>
	<string name="lable_all_incoming">All incoming calls</string>
	<string name="lable_incoming_calls_except">Incoming calls while roaming</string>
	<string name="deactivate_all">Cancel all</string>
	<string name="change_password">Change barring password</string>
    <string name="lable_disable">Disabled</string>
    <string name="call_cost_settings">Call cost </string>
    <string name="sum_call_cost">Call cost information</string>
    <string name="last_call_cost">Last call cost</string>
    <string name="total_call_cost">Total cost</string>
    <string name="max_call_cost">Max cost</string>
    <string name="reset_call_cost">Reset call cost </string>
    <string name="set_ppu_currency">Set currency and price per unit</string>
    <string name="enter_your_pin">Enter PIN2 (4 to 8 numbers)</string>
    <string name="show_ppu_menu">Input Pay per unit (0~100000.0)</string>
    <string name="show_currency_menu">Input currency (3 characters)</string>
    <string name="cell_broadcast">Cell broadcast</string>
    <string name="cell_broadcast_settings">Cell broadcast settings</string>
    <string name="cb_channel_dialog_channel_name">Channel name (1-10 characters)</string>
    <string name="cb_channel_dialog_channel_number">Channel number (0-999)</string>
    <string name="cb_channel_dialog_channel_state">Enable the channel</string>
    <string name="vt_settings">Video settings</string>
    <string name="vt_local_video_zoom">Local video zoom</string>
    <string name="vt_local_video_brightness">Local video brightness</string>
    <string name="vt_local_video_effect">Local video effect</string>
    <string name="vt_local_video_nightmode">Local video night mode</string>
    <string name="vt_peer_video_quality">Peer video quality</string>
    <string name="others">Other settings</string>
    <string name="auto_reject_title">Block incoming calls</string>
    <string name="auto_reject_sum">Block different incoming calls directly</string>
    <string name="auto_reject_title_voice">Voice calls</string>
    <string name="auto_reject_title_video">Video calls</string>
    <string name="auto_reject_title_sip">Internet calls</string>
    <string name="auto_reject_sum_voice">Set to block all voice incoming calls directly</string>
    <string name="auto_reject_sum_video">Set to block all video incoming calls directly</string>
    <string name="auto_reject_sum_sip">Set to block all Internet incoming calls directly</string>
    <string name="minutereminder_title">Minute reminder</string>
    <string name="minutereminder_turnon">Turn on minute reminder at 50s of every minute</string>
    <string name="minutereminder_turnoff">Turn off minute reminder</string>
	<string name="phone_setting">Phone settings</string>
    <string name="eidt_default_message">Edit default message</string>
    <string name="edit_message_before_sending">Edit message before sending</string>
    <string name="tty_setting">"TTY Setting"</string>
    <string name="dual_mic_title">Dual Mic Noise Reduction</string>
    <string name="dual_mic_turnoff">Dual mic off</string>
    <string name="dual_mic_turnon">Dual mic on</string>
    <string name="dialog_network_mode_title">Service</string>
    <string name="dialog_network_priority_title">Priority</string>
</resources>