<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project
-->
<!-- New file Added by xin.chen@archermind.com -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Rearranged to use EditPinPreference -->
    <com.android.phone.CallBarringBasePreference
        android:key="all_outing_key" 
        android:persistent="false"
        android:summary="@string/lable_disable"
        android:title="@string/lable_all_outgoing"/>
        
     <com.android.phone.CallBarringBasePreference
        android:key="all_outing_international_key" 
        android:persistent="false"
        android:summary="@string/lable_disable"
        android:title="@string/lable_all_outgoing_international"/>
        
     <com.android.phone.CallBarringBasePreference
        android:key="all_outing_except_key" 
        android:persistent="false"
        android:summary="@string/lable_disable"
        android:title="@string/lable_all_out_except"/>

	<com.android.phone.CallBarringBasePreference
        android:key="all_incoming_key" 
        android:persistent="false"
        android:summary="@string/lable_disable"
        android:title="@string/lable_all_incoming"/>

	<com.android.phone.CallBarringBasePreference
		android:key="all_incoming_except_key" 
		android:persistent="false"
		android:summary="@string/lable_disable" 
		android:title="@string/lable_incoming_calls_except" />

	<com.android.phone.CallBarringResetPreference
		android:key="deactivate_all_key" 
		android:persistent="false"
		android:dialogMessage="@string/enter_pin2_text" 
		android:title="@string/deactivate_all" />

	<com.android.phone.CallBarringChangePassword
		android:key="change_password_key" 
		android:persistent="false"
		android:dialogTitle="@string/change_password" 
		android:title="@string/change_password" />
		
</PreferenceScreen>

