<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
            android:id="@+id/cb_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <TextView android:text="@string/cb_channel_dialog_channel_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText android:id="@+id/edit_channel_name"
        android:maxLength="10" 
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </EditText>
    <TextView android:text="@string/cb_channel_dialog_channel_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText android:id="@+id/edit_channel_number"
        android:numeric="integer" 
        android:maxLength="3"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
    </EditText>
    <CheckBox android:id="@+id/checkbox_channel_enable"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/cb_channel_dialog_channel_state">
    </CheckBox>
    <LinearLayout android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="54dip"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dip"
            android:paddingLeft="2dip"
            android:paddingRight="2dip">
            <LinearLayout android:id="@+id/leftSpacer"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
            <Button android:id="@+id/cb_ok"
                android:layout_width="0dip"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
            <Button android:id="@+id/cb_cancel"
                android:layout_width="0dip"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:maxLines="2"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
            <LinearLayout android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>
     </LinearLayout>

    
</LinearLayout>
</ScrollView>