<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:fillViewport="true"
	android:layout_height="54dip" 
	android:layout_centerVertical="true">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:padding="5dip"
			android:orientation="vertical">
			<TextView android:text="@string/show_currency_menu"
				android:id="@+id/TextView03" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:textSize="16dip" 
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			<EditText android:id="@+id/get_currency"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:maxLength="3" 
				android:singleLine="true">
			</EditText>
			<TextView android:text="@string/show_ppu_menu" 
				android:id="@+id/TextView02"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:textSize="16dip" 
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			<EditText android:id="@+id/get_ppu" 
				android:inputType="numberDecimal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:maxLength="11" 
				android:singleLine="true">
			</EditText>
			<TextView android:text="@string/enter_your_pin" 
				android:id="@+id/showPinTitle"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:textSize="16dip" 
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			<EditText android:numeric="integer" 
				android:id="@+id/get_pin"
				android:maxLength="8" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:password="true"
				android:singleLine="true">
			</EditText>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>

